gen2satvsmettel/softwares/mettel/output/Lukavronb/language/Lukavronb/LukavronbParser.java
// $ANTLR 3.4 output/Lukavronb/language/Lukavronb/Lukavronb.g 2017-04-12 16:41:41

package Lukavronb.language.Lukavronb;

import java.util.Collection;
import java.util.ArrayList;
import java.util.LinkedHashSet;

import mettel.core.tableau.MettelGeneralTableauRule;
import mettel.core.language.MettelAbstractLogicParser;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;

/**
 * This file is generated by MetTeL v2
 * which is designed and implemented
 * by Dmitry Tishkovsky.
 */
@SuppressWarnings({"all", "warnings", "unchecked"})
public class LukavronbParser extends MettelAbstractLogicParser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "COMMENT", "ID", "ID_DIGIT", "INT", "LETTER", "WS", "'!'", "'$;'", "'$|'", "'&'", "'('", "')'", "'->'", "'/'", "'F'", "'T'", "'priority'", "'|'"
    };

    public static final int EOF=-1;
    public static final int T__10=10;
    public static final int T__11=11;
    public static final int T__12=12;
    public static final int T__13=13;
    public static final int T__14=14;
    public static final int T__15=15;
    public static final int T__16=16;
    public static final int T__17=17;
    public static final int T__18=18;
    public static final int T__19=19;
    public static final int T__20=20;
    public static final int T__21=21;
    public static final int COMMENT=4;
    public static final int ID=5;
    public static final int ID_DIGIT=6;
    public static final int INT=7;
    public static final int LETTER=8;
    public static final int WS=9;

    // delegates
    public MettelAbstractLogicParser[] getDelegates() {
        return new MettelAbstractLogicParser[] {};
    }

    // delegators


    public LukavronbParser(TokenStream input) {
        this(input, new RecognizerSharedState());
    }
    public LukavronbParser(TokenStream input, RecognizerSharedState state) {
        super(input, state);
    }

    public String[] getTokenNames() { return LukavronbParser.tokenNames; }
    public String getGrammarFileName() { return "output/Lukavronb/language/Lukavronb/Lukavronb.g"; }


    public Object recoverFromMismatchedToken(IntStream input, int ttype, BitSet follow)
           throws RecognitionException{
        MismatchedTokenException e = new MismatchedTokenException(ttype, input);
        reportError(e);
        throw e;
    }
    private LukavronbObjectFactory factory = LukavronbObjectFactory.DEFAULT;
    public LukavronbParser(TokenStream input, LukavronbObjectFactory factory){
        this(input);
        this.factory = factory;
    }
    public LukavronbParser(TokenStream input, RecognizerSharedState state, LukavronbObjectFactory factory){
        this(input,state);
        this.factory = factory;
    }



    // $ANTLR start "valuations"
    // output/Lukavronb/language/Lukavronb/Lukavronb.g:49:1: valuations[Collection<Lukavronb_valuation> a0] : ( ( (e0= valuation )* ) ( EOF ) ) ;
    public final void valuations(Collection<Lukavronb_valuation> a0) throws RecognitionException {
        Lukavronb_valuation e0 =null;


        try {
            // output/Lukavronb/language/Lukavronb/Lukavronb.g:51:2: ( ( ( (e0= valuation )* ) ( EOF ) ) )
            // output/Lukavronb/language/Lukavronb/Lukavronb.g:52:2: ( ( (e0= valuation )* ) ( EOF ) )
            {
            // output/Lukavronb/language/Lukavronb/Lukavronb.g:52:2: ( ( (e0= valuation )* ) ( EOF ) )
            // output/Lukavronb/language/Lukavronb/Lukavronb.g:53:2: ( (e0= valuation )* ) ( EOF )
            {
            // output/Lukavronb/language/Lukavronb/Lukavronb.g:53:2: ( (e0= valuation )* )
            // output/Lukavronb/language/Lukavronb/Lukavronb.g:54:3: (e0= valuation )*
            {
            // output/Lukavronb/language/Lukavronb/Lukavronb.g:54:3: (e0= valuation )*
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( (LA1_0==ID||LA1_0==14||(LA1_0 >= 18 && LA1_0 <= 19)) ) {
                    alt1=1;
                }


                switch (alt1) {
            	case 1 :
            	    // output/Lukavronb/language/Lukavronb/Lukavronb.g:54:4: e0= valuation
            	    {
            	    pushFollow(FOLLOW_valuation_in_valuations72);
            	    e0=valuation();

            	    state._fsp--;
            	    if (state.failed) return ;

            	    if ( state.backtracking==0 ) {
            	       a0.add(e0);
            	       }

            	    }
            	    break;

            	default :
            	    break loop1;
                }
            } while (true);


            }


            // output/Lukavronb/language/Lukavronb/Lukavronb.g:61:2: ( EOF )
            // output/Lukavronb/language/Lukavronb/Lukavronb.g:61:3: EOF
            {
            match(input,EOF,FOLLOW_EOF_in_valuations90); if (state.failed) return ;

            }


            }


            }

        }

        catch (RecognitionException e) {
        reportError(e);
        throw e;
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "valuations"



    // $ANTLR start "valuationVariable"
    // output/Lukavronb/language/Lukavronb/Lukavronb.g:64:1: valuationVariable returns [Lukavronb_valuation r0] : (t= ID ) ;
    public final Lukavronb_valuation valuationVariable() throws RecognitionException {
        Lukavronb_valuation r0 = null;


        Token t=null;

        try {
            // output/Lukavronb/language/Lukavronb/Lukavronb.g:69:2: ( (t= ID ) )
            // output/Lukavronb/language/Lukavronb/Lukavronb.g:70:2: (t= ID )
            {
            // output/Lukavronb/language/Lukavronb/Lukavronb.g:70:2: (t= ID )
            // output/Lukavronb/language/Lukavronb/Lukavronb.g:70:2: t= ID
            {
            t=(Token)match(input,ID,FOLLOW_ID_in_valuationVariable114); if (state.failed) return r0;

            }


            }

            if ( state.backtracking==0 ) {
            r0 = factory.create_valuationVariable(t.getText());
            }
        }

        catch (RecognitionException e) {
        reportError(e);
        throw e;
        }

        finally {
        	// do for sure before leaving
        }
        return r0;
    }
    // $ANTLR end "valuationVariable"



    // $ANTLR start "basic_valuation"
    // output/Lukavronb/language/Lukavronb/Lukavronb.g:72:1: basic_valuation returns [Lukavronb_valuation r0] : ( (e0= valuationVariable ) | ( ( '(' ) (e0= valuation ) ( ')' ) ) ) ;
    public final Lukavronb_valuation basic_valuation() throws RecognitionException {
        Lukavronb_valuation r0 = null;


        Lukavronb_valuation e0 =null;


        try {
            // output/Lukavronb/language/Lukavronb/Lukavronb.g:77:2: ( ( (e0= valuationVariable ) | ( ( '(' ) (e0= valuation ) ( ')' ) ) ) )
            // output/Lukavronb/language/Lukavronb/Lukavronb.g:78:2: ( (e0= valuationVariable ) | ( ( '(' ) (e0= valuation ) ( ')' ) ) )
            {
            // output/Lukavronb/language/Lukavronb/Lukavronb.g:78:2: ( (e0= valuationVariable ) | ( ( '(' ) (e0= valuation ) ( ')' ) ) )
            int alt2=2;
            int LA2_0 = input.LA(1);

            if ( (LA2_0==ID) ) {
                alt2=1;
            }
            else if ( (LA2_0==14) ) {
                alt2=2;
            }
            else {
                if (state.backtracking>0) {state.failed=true; return r0;}
                NoViableAltException nvae =
                    new NoViableAltException("", 2, 0, input);

                throw nvae;

            }
            switch (alt2) {
                case 1 :
                    // output/Lukavronb/language/Lukavronb/Lukavronb.g:79:2: (e0= valuationVariable )
                    {
                    // output/Lukavronb/language/Lukavronb/Lukavronb.g:79:2: (e0= valuationVariable )
                    // output/Lukavronb/language/Lukavronb/Lukavronb.g:79:3: e0= valuationVariable
                    {
                    pushFollow(FOLLOW_valuationVariable_in_basic_valuation139);
                    e0=valuationVariable();

                    state._fsp--;
                    if (state.failed) return r0;

                    }


                    }
                    break;
                case 2 :
                    // output/Lukavronb/language/Lukavronb/Lukavronb.g:81:2: ( ( '(' ) (e0= valuation ) ( ')' ) )
                    {
                    // output/Lukavronb/language/Lukavronb/Lukavronb.g:81:2: ( ( '(' ) (e0= valuation ) ( ')' ) )
                    // output/Lukavronb/language/Lukavronb/Lukavronb.g:82:3: ( '(' ) (e0= valuation ) ( ')' )
                    {
                    // output/Lukavronb/language/Lukavronb/Lukavronb.g:82:3: ( '(' )
                    // output/Lukavronb/language/Lukavronb/Lukavronb.g:82:4: '('
                    {
                    match(input,14,FOLLOW_14_in_basic_valuation151); if (state.failed) return r0;

                    }


                    // output/Lukavronb/language/Lukavronb/Lukavronb.g:83:3: (e0= valuation )
                    // output/Lukavronb/language/Lukavronb/Lukavronb.g:83:4: e0= valuation
                    {
                    pushFollow(FOLLOW_valuation_in_basic_valuation161);
                    e0=valuation();

                    state._fsp--;
                    if (state.failed) return r0;

                    }


                    // output/Lukavronb/language/Lukavronb/Lukavronb.g:84:3: ( ')' )
                    // output/Lukavronb/language/Lukavronb/Lukavronb.g:84:4: ')'
                    {
                    match(input,15,FOLLOW_15_in_basic_valuation167); if (state.failed) return r0;

                    }


                    }


                    }
                    break;

            }


            }

            if ( state.backtracking==0 ) {
            r0 = e0;
            }
        }

        catch (RecognitionException e) {
        reportError(e);
        throw e;
        }

        finally {
        	// do for sure before leaving
        }
        return r0;
    }
    // $ANTLR end "basic_valuation"



    // $ANTLR start "valuation_true"
    // output/Lukavronb/language/Lukavronb/Lukavronb.g:88:1: valuation_true returns [Lukavronb_valuation r0] : ( (e00= basic_valuation ) | ( ( 'T' ) (e10= formula ) ) ) ;
    public final Lukavronb_valuation valuation_true() throws RecognitionException {
        Lukavronb_valuation r0 = null;


        Lukavronb_valuation e00 =null;

        Lukavronb_formula e10 =null;


        try {
            // output/Lukavronb/language/Lukavronb/Lukavronb.g:90:2: ( ( (e00= basic_valuation ) | ( ( 'T' ) (e10= formula ) ) ) )
            // output/Lukavronb/language/Lukavronb/Lukavronb.g:91:2: ( (e00= basic_valuation ) | ( ( 'T' ) (e10= formula ) ) )
            {
            // output/Lukavronb/language/Lukavronb/Lukavronb.g:91:2: ( (e00= basic_valuation ) | ( ( 'T' ) (e10= formula ) ) )
            int alt3=2;
            int LA3_0 = input.LA(1);

            if ( (LA3_0==ID||LA3_0==14) ) {
                alt3=1;
            }
            else if ( (LA3_0==19) ) {
                alt3=2;
            }
            else {
                if (state.backtracking>0) {state.failed=true; return r0;}
                NoViableAltException nvae =
                    new NoViableAltException("", 3, 0, input);

                throw nvae;

            }
            switch (alt3) {
                case 1 :
                    // output/Lukavronb/language/Lukavronb/Lukavronb.g:92:2: (e00= basic_valuation )
                    {
                    // output/Lukavronb/language/Lukavronb/Lukavronb.g:92:2: (e00= basic_valuation )
                    // output/Lukavronb/language/Lukavronb/Lukavronb.g:92:3: e00= basic_valuation
                    {
                    pushFollow(FOLLOW_basic_valuation_in_valuation_true193);
                    e00=basic_valuation();

                    state._fsp--;
                    if (state.failed) return r0;

                    if ( state.backtracking==0 ) {
                      r0 = e00;
                      }

                    }


                    }
                    break;
                case 2 :
                    // output/Lukavronb/language/Lukavronb/Lukavronb.g:99:2: ( ( 'T' ) (e10= formula ) )
                    {
                    // output/Lukavronb/language/Lukavronb/Lukavronb.g:99:2: ( ( 'T' ) (e10= formula ) )
                    // output/Lukavronb/language/Lukavronb/Lukavronb.g:100:3: ( 'T' ) (e10= formula )
                    {
                    // output/Lukavronb/language/Lukavronb/Lukavronb.g:100:3: ( 'T' )
                    // output/Lukavronb/language/Lukavronb/Lukavronb.g:100:4: 'T'
                    {
                    match(input,19,FOLLOW_19_in_valuation_true212); if (state.failed) return r0;

                    }


                    // output/Lukavronb/language/Lukavronb/Lukavronb.g:101:3: (e10= formula )
                    // output/Lukavronb/language/Lukavronb/Lukavronb.g:101:4: e10= formula
                    {
                    pushFollow(FOLLOW_formula_in_valuation_true222);
                    e10=formula();

                    state._fsp--;
                    if (state.failed) return r0;

                    }


                    if ( state.backtracking==0 ) {
                      r0 = factory.create_true_valuation(e10);
                      }

                    }


                    }
                    break;

            }


            }

        }

        catch (RecognitionException e) {
        reportError(e);
        throw e;
        }

        finally {
        	// do for sure before leaving
        }
        return r0;
    }
    // $ANTLR end "valuation_true"



    // $ANTLR start "valuation_false"
    // output/Lukavronb/language/Lukavronb/Lukavronb.g:110:1: valuation_false returns [Lukavronb_valuation r0] : ( (e00= valuation_true ) | ( ( 'F' ) (e10= formula ) ) ) ;
    public final Lukavronb_valuation valuation_false() throws RecognitionException {
        Lukavronb_valuation r0 = null;


        Lukavronb_valuation e00 =null;

        Lukavronb_formula e10 =null;


        try {
            // output/Lukavronb/language/Lukavronb/Lukavronb.g:112:2: ( ( (e00= valuation_true ) | ( ( 'F' ) (e10= formula ) ) ) )
            // output/Lukavronb/language/Lukavronb/Lukavronb.g:113:2: ( (e00= valuation_true ) | ( ( 'F' ) (e10= formula ) ) )
            {
            // output/Lukavronb/language/Lukavronb/Lukavronb.g:113:2: ( (e00= valuation_true ) | ( ( 'F' ) (e10= formula ) ) )
            int alt4=2;
            int LA4_0 = input.LA(1);

            if ( (LA4_0==ID||LA4_0==14||LA4_0==19) ) {
                alt4=1;
            }
            else if ( (LA4_0==18) ) {
                alt4=2;
            }
            else {
                if (state.backtracking>0) {state.failed=true; return r0;}
                NoViableAltException nvae =
                    new NoViableAltException("", 4, 0, input);

                throw nvae;

            }
            switch (alt4) {
                case 1 :
                    // output/Lukavronb/language/Lukavronb/Lukavronb.g:114:2: (e00= valuation_true )
                    {
                    // output/Lukavronb/language/Lukavronb/Lukavronb.g:114:2: (e00= valuation_true )
                    // output/Lukavronb/language/Lukavronb/Lukavronb.g:114:3: e00= valuation_true
                    {
                    pushFollow(FOLLOW_valuation_true_in_valuation_false255);
                    e00=valuation_true();

                    state._fsp--;
                    if (state.failed) return r0;

                    if ( state.backtracking==0 ) {
                      r0 = e00;
                      }

                    }


                    }
                    break;
                case 2 :
                    // output/Lukavronb/language/Lukavronb/Lukavronb.g:121:2: ( ( 'F' ) (e10= formula ) )
                    {
                    // output/Lukavronb/language/Lukavronb/Lukavronb.g:121:2: ( ( 'F' ) (e10= formula ) )
                    // output/Lukavronb/language/Lukavronb/Lukavronb.g:122:3: ( 'F' ) (e10= formula )
                    {
                    // output/Lukavronb/language/Lukavronb/Lukavronb.g:122:3: ( 'F' )
                    // output/Lukavronb/language/Lukavronb/Lukavronb.g:122:4: 'F'
                    {
                    match(input,18,FOLLOW_18_in_valuation_false274); if (state.failed) return r0;

                    }


                    // output/Lukavronb/language/Lukavronb/Lukavronb.g:123:3: (e10= formula )
                    // output/Lukavronb/language/Lukavronb/Lukavronb.g:123:4: e10= formula
                    {
                    pushFollow(FOLLOW_formula_in_valuation_false284);
                    e10=formula();

                    state._fsp--;
                    if (state.failed) return r0;

                    }


                    if ( state.backtracking==0 ) {
                      r0 = factory.create_false_valuation(e10);
                      }

                    }


                    }
                    break;

            }


            }

        }

        catch (RecognitionException e) {
        reportError(e);
        throw e;
        }

        finally {
        	// do for sure before leaving
        }
        return r0;
    }
    // $ANTLR end "valuation_false"



    // $ANTLR start "valuation"
    // output/Lukavronb/language/Lukavronb/Lukavronb.g:132:1: valuation returns [Lukavronb_valuation r0] : (e0= valuation_false ) ;
    public final Lukavronb_valuation valuation() throws RecognitionException {
        Lukavronb_valuation r0 = null;


        Lukavronb_valuation e0 =null;


        try {
            // output/Lukavronb/language/Lukavronb/Lukavronb.g:137:2: ( (e0= valuation_false ) )
            // output/Lukavronb/language/Lukavronb/Lukavronb.g:138:2: (e0= valuation_false )
            {
            // output/Lukavronb/language/Lukavronb/Lukavronb.g:138:2: (e0= valuation_false )
            // output/Lukavronb/language/Lukavronb/Lukavronb.g:138:2: e0= valuation_false
            {
            pushFollow(FOLLOW_valuation_false_in_valuation318);
            e0=valuation_false();

            state._fsp--;
            if (state.failed) return r0;

            }


            }

            if ( state.backtracking==0 ) {
            r0 = e0;
            }
        }

        catch (RecognitionException e) {
        reportError(e);
        throw e;
        }

        finally {
        	// do for sure before leaving
        }
        return r0;
    }
    // $ANTLR end "valuation"



    // $ANTLR start "formulas"
    // output/Lukavronb/language/Lukavronb/Lukavronb.g:140:1: formulas[Collection<Lukavronb_formula> a0] : ( ( (e0= formula )* ) ( EOF ) ) ;
    public final void formulas(Collection<Lukavronb_formula> a0) throws RecognitionException {
        Lukavronb_formula e0 =null;


        try {
            // output/Lukavronb/language/Lukavronb/Lukavronb.g:142:2: ( ( ( (e0= formula )* ) ( EOF ) ) )
            // output/Lukavronb/language/Lukavronb/Lukavronb.g:143:2: ( ( (e0= formula )* ) ( EOF ) )
            {
            // output/Lukavronb/language/Lukavronb/Lukavronb.g:143:2: ( ( (e0= formula )* ) ( EOF ) )
            // output/Lukavronb/language/Lukavronb/Lukavronb.g:144:2: ( (e0= formula )* ) ( EOF )
            {
            // output/Lukavronb/language/Lukavronb/Lukavronb.g:144:2: ( (e0= formula )* )
            // output/Lukavronb/language/Lukavronb/Lukavronb.g:145:3: (e0= formula )*
            {
            // output/Lukavronb/language/Lukavronb/Lukavronb.g:145:3: (e0= formula )*
            loop5:
            do {
                int alt5=2;
                int LA5_0 = input.LA(1);

                if ( (LA5_0==ID||LA5_0==10||LA5_0==14) ) {
                    alt5=1;
                }


                switch (alt5) {
            	case 1 :
            	    // output/Lukavronb/language/Lukavronb/Lukavronb.g:145:4: e0= formula
            	    {
            	    pushFollow(FOLLOW_formula_in_formulas341);
            	    e0=formula();

            	    state._fsp--;
            	    if (state.failed) return ;

            	    if ( state.backtracking==0 ) {
            	       a0.add(e0);
            	       }

            	    }
            	    break;

            	default :
            	    break loop5;
                }
            } while (true);


            }


            // output/Lukavronb/language/Lukavronb/Lukavronb.g:152:2: ( EOF )
            // output/Lukavronb/language/Lukavronb/Lukavronb.g:152:3: EOF
            {
            match(input,EOF,FOLLOW_EOF_in_formulas359); if (state.failed) return ;

            }


            }


            }

        }

        catch (RecognitionException e) {
        reportError(e);
        throw e;
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "formulas"



    // $ANTLR start "formulaVariable"
    // output/Lukavronb/language/Lukavronb/Lukavronb.g:155:1: formulaVariable returns [Lukavronb_formula r0] : (t= ID ) ;
    public final Lukavronb_formula formulaVariable() throws RecognitionException {
        Lukavronb_formula r0 = null;


        Token t=null;

        try {
            // output/Lukavronb/language/Lukavronb/Lukavronb.g:160:2: ( (t= ID ) )
            // output/Lukavronb/language/Lukavronb/Lukavronb.g:161:2: (t= ID )
            {
            // output/Lukavronb/language/Lukavronb/Lukavronb.g:161:2: (t= ID )
            // output/Lukavronb/language/Lukavronb/Lukavronb.g:161:2: t= ID
            {
            t=(Token)match(input,ID,FOLLOW_ID_in_formulaVariable383); if (state.failed) return r0;

            }


            }

            if ( state.backtracking==0 ) {
            r0 = factory.create_formulaVariable(t.getText());
            }
        }

        catch (RecognitionException e) {
        reportError(e);
        throw e;
        }

        finally {
        	// do for sure before leaving
        }
        return r0;
    }
    // $ANTLR end "formulaVariable"



    // $ANTLR start "basic_formula"
    // output/Lukavronb/language/Lukavronb/Lukavronb.g:163:1: basic_formula returns [Lukavronb_formula r0] : ( (e0= formulaVariable ) | ( ( '(' ) (e0= formula ) ( ')' ) ) ) ;
    public final Lukavronb_formula basic_formula() throws RecognitionException {
        Lukavronb_formula r0 = null;


        Lukavronb_formula e0 =null;


        try {
            // output/Lukavronb/language/Lukavronb/Lukavronb.g:168:2: ( ( (e0= formulaVariable ) | ( ( '(' ) (e0= formula ) ( ')' ) ) ) )
            // output/Lukavronb/language/Lukavronb/Lukavronb.g:169:2: ( (e0= formulaVariable ) | ( ( '(' ) (e0= formula ) ( ')' ) ) )
            {
            // output/Lukavronb/language/Lukavronb/Lukavronb.g:169:2: ( (e0= formulaVariable ) | ( ( '(' ) (e0= formula ) ( ')' ) ) )
            int alt6=2;
            int LA6_0 = input.LA(1);

            if ( (LA6_0==ID) ) {
                alt6=1;
            }
            else if ( (LA6_0==14) ) {
                alt6=2;
            }
            else {
                if (state.backtracking>0) {state.failed=true; return r0;}
                NoViableAltException nvae =
                    new NoViableAltException("", 6, 0, input);

                throw nvae;

            }
            switch (alt6) {
                case 1 :
                    // output/Lukavronb/language/Lukavronb/Lukavronb.g:170:2: (e0= formulaVariable )
                    {
                    // output/Lukavronb/language/Lukavronb/Lukavronb.g:170:2: (e0= formulaVariable )
                    // output/Lukavronb/language/Lukavronb/Lukavronb.g:170:3: e0= formulaVariable
                    {
                    pushFollow(FOLLOW_formulaVariable_in_basic_formula408);
                    e0=formulaVariable();

                    state._fsp--;
                    if (state.failed) return r0;

                    }


                    }
                    break;
                case 2 :
                    // output/Lukavronb/language/Lukavronb/Lukavronb.g:172:2: ( ( '(' ) (e0= formula ) ( ')' ) )
                    {
                    // output/Lukavronb/language/Lukavronb/Lukavronb.g:172:2: ( ( '(' ) (e0= formula ) ( ')' ) )
                    // output/Lukavronb/language/Lukavronb/Lukavronb.g:173:3: ( '(' ) (e0= formula ) ( ')' )
                    {
                    // output/Lukavronb/language/Lukavronb/Lukavronb.g:173:3: ( '(' )
                    // output/Lukavronb/language/Lukavronb/Lukavronb.g:173:4: '('
                    {
                    match(input,14,FOLLOW_14_in_basic_formula420); if (state.failed) return r0;

                    }


                    // output/Lukavronb/language/Lukavronb/Lukavronb.g:174:3: (e0= formula )
                    // output/Lukavronb/language/Lukavronb/Lukavronb.g:174:4: e0= formula
                    {
                    pushFollow(FOLLOW_formula_in_basic_formula430);
                    e0=formula();

                    state._fsp--;
                    if (state.failed) return r0;

                    }


                    // output/Lukavronb/language/Lukavronb/Lukavronb.g:175:3: ( ')' )
                    // output/Lukavronb/language/Lukavronb/Lukavronb.g:175:4: ')'
                    {
                    match(input,15,FOLLOW_15_in_basic_formula436); if (state.failed) return r0;

                    }


                    }


                    }
                    break;

            }


            }

            if ( state.backtracking==0 ) {
            r0 = e0;
            }
        }

        catch (RecognitionException e) {
        reportError(e);
        throw e;
        }

        finally {
        	// do for sure before leaving
        }
        return r0;
    }
    // $ANTLR end "basic_formula"



    // $ANTLR start "formula_negation"
    // output/Lukavronb/language/Lukavronb/Lukavronb.g:179:1: formula_negation returns [Lukavronb_formula r0] : ( (e00= basic_formula ) | ( ( '!' ) (e10= basic_formula ) ) ) ;
    public final Lukavronb_formula formula_negation() throws RecognitionException {
        Lukavronb_formula r0 = null;

